--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
     <p style="margin: 5px 0; font-size: 0.9em;">💰 200 Euros/month</p>
     <a href="https://formspree.io/f/xvggoydk" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
 </div>
+    <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+    <label for="name">Full Name</label>
+    <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+
+    <label for="goals">Language Learning Goals</label>
+    <textarea id="goals" name="goals" placeholder="What do you want to focus on? Pronunciation, grammar, speaking, etc."></textarea>
+
+    <label for="availability">Preferred Lesson Times</label>
+    <input type="text" id="availability" name="availability" placeholder="Your availability (e.g., evenings, weekends)">
+
+    <button type="submit">Submit</button>
+</form>
+
 
     <section id="hero">
         <img src="IMG_2556.jpg" alt="Learn French" style="width: 50%; display: block; margin: 0 auto;">
