--- a/index.html
+++ b/index.html
@@ -49,28 +49,29 @@
             </ul>
         </nav>
     </header>
-    <!-- Red Signal Box -->
+   <!-- Red Signal Box -->
 <div style="position: fixed; top: 20%; left: 10px; background-color: #ffcccc; color: red; padding: 10px; border: 2px solid red; border-radius: 5px; z-index: 1000; width: 250px;">
-    <h4 style="margin: 0; font-size: 1.1em;">🚨 6-Months Challenge</h4>
+    <h4 style="margin: 0; font-size: 1.1em;">🚨 6-Month Challenge</h4>
     <p style="margin: 5px 0; font-size: 0.9em;">90 min, 4x/week</p>
     <p style="margin: 5px 0; font-size: 0.9em;">💰 200 Euros/month</p>
-    <a href="https://formspree.io/f/xvggoydk" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
-</div>
+
+    <!-- 6-Month Challenge Form -->
     <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-    <label for="name">Full Name</label>
-    <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+        <a href="challenge-form.html" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
+        
+        <!-- Example fields if you need additional information -->
+        <label for="challenge_name">Full Name</label>
+        <input type="text" id="challenge_name" name="challenge_name" placeholder="Your Full Name" required>
 
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+        <label for="challenge_email">Email</label>
+        <input type="email" id="challenge_email" name="challenge_email" placeholder="Your Email Address" required>
 
-    <label for="goals">Language Learning Goals</label>
-    <textarea id="goals" name="goals" placeholder="What do you want to focus on? Pronunciation, grammar, speaking, etc."></textarea>
+        <label for="challenge_goals">Learning Goals</label>
+        <textarea id="challenge_goals" name="challenge_goals" placeholder="What are your goals for the 6-month challenge?"></textarea>
 
-    <label for="availability">Preferred Lesson Times</label>
-    <input type="text" id="availability" name="availability" placeholder="Your availability (e.g., evenings, weekends)">
-
-    <button type="submit">Submit</button>
-</form>
+        <button type="submit">Submit</button>
+    </form>
+</div>
 
 
     <section id="hero">
