--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </ul>
         </nav>
     </header>
-   <!-- Red Signal Box -->
-<div style="position: fixed; top: 20%; left: 10px; background-color: #ffcccc; color: red; padding: 10px; border: 2px solid red; border-radius: 5px; z-index: 1000; width: 250px;">
+  <!-- Red Signal Box -->
+<div id="challenge-box">
     <h4 style="margin: 0; font-size: 1.1em;">🚨 6-Month Challenge</h4>
     <p style="margin: 5px 0; font-size: 0.9em;">90 min, 4x/week</p>
     <p style="margin: 5px 0; font-size: 0.9em;">💰 200 Euros/month</p>
@@ -59,7 +59,6 @@
     <form action="https://formspree.io/f/xjkkbrlj" method="POST">
         <a href="challenge-form.html" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
         
-        <!-- Example fields if you need additional information -->
         <label for="challenge_name">Full Name</label>
         <input type="text" id="challenge_name" name="challenge_name" placeholder="Your Full Name" required>
 
@@ -72,6 +71,7 @@
         <button type="submit">Submit</button>
     </form>
 </div>
+
 
 
     <section id="hero">
