--- a/index.html
+++ b/index.html
@@ -4,96 +4,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn French with Meriem, an experienced teacher offering personalized lessons for all levels.">
-    <meta name="keywords" content="Learn French, French lessons, French tutor, online French teacher">
-    <meta name="author" content="Meriem">
-    <title>Learn French with Meriem</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>French Lessons with Meriem</title>
     <style>
-        /* Fixed 6-Month Challenge Box */
-        #challenge-box {
-            position: fixed;
-            top: 20px; /* Adjust this to place the box where needed */
-            left: 10px;
-            background-color: #ffcccc;
-            color: red;
-            padding: 10px;
-            border: 2px solid red;
-            border-radius: 5px;
-            z-index: 1000;
-            width: 220px; /* Adjust width for smaller size */
-            box-sizing: border-box;
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
         }
 
-        /* Adjust layout for forms */
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
         .form-container {
             display: flex;
-            flex-wrap: wrap;
-            gap: 20px; /* Space between the two forms */
-            justify-content: center;
-            margin: 20px auto;
-            width: 90%; /* Keeps it responsive */
-            max-width: 1200px; /* Prevents stretching on larger screens */
+            justify-content: space-evenly;
+            align-items: flex-start;
+            margin: 20px;
+            gap: 20px;
         }
 
         form {
-            width: 100%;
-            max-width: 400px; /* Make forms smaller */
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 40%;
+            box-sizing: border-box;
+        }
+
+        form h2 {
+            margin-top: 0;
+        }
+
+        form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
         }
 
         form input,
         form textarea,
         form button {
             width: 100%;
-            margin: 10px 0;
-            padding: 8px;
+            margin-bottom: 15px;
+            padding: 10px;
+            font-size: 14px;
             border: 1px solid #ccc;
-            border-radius: 3px;
+            border-radius: 4px;
             box-sizing: border-box;
         }
 
         form button {
-            background-color: #007BFF;
+            background-color: #333;
             color: white;
             border: none;
             cursor: pointer;
-            padding: 10px;
         }
 
         form button:hover {
-            background-color: #0056b3;
+            background-color: #555;
         }
 
-        /* Media Queries */
+        /* 6-Month Challenge Styles */
+        #challenge-form {
+            border: 2px solid red;
+            background-color: #ffe6e6;
+            color: red;
+            position: relative;
+        }
+
+        #challenge-form h2 {
+            color: red;
+        }
+
+        #challenge-details {
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             .form-container {
-                flex-direction: column; /* Stack forms vertically on smaller screens */
+                flex-direction: column;
+                align-items: center;
             }
 
-            #challenge-box {
-                top: 10px;
-                left: 5px;
-                width: 180px; /* Smaller on small screens */
+            form {
+                width: 90%;
             }
         }
     </style>
 </head>
 
 <body>
-    <!-- Fixed 6-Month Challenge Box -->
-    <div id="challenge-box">
-        <h4>🚨 6-Month Challenge</h4>
-        <p>90 min, 4x/week</p>
-        <p>💰 200 Euros/month</p>
-        <a href="challenge-form.html" style="display: inline-block; padding: 5px 10px; background-color: red; color: white; text-decoration: none; border-radius: 3px;">Join Now</a>
-    </div>
+    <header>
+        <h1>French Lessons with Meriem</h1>
+    </header>
 
-    <!-- Forms Section -->
     <section class="form-container">
         <!-- Contact Form -->
         <form action="https://formspree.io/f/xjkkbrlj" method="POST">
@@ -108,8 +121,13 @@
         </form>
 
         <!-- 6-Month Challenge Form -->
-        <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-            <h2>6-Month Challenge</h2>
+        <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
+            <h2>🚨 6-Month Challenge</h2>
+            <div id="challenge-details">
+                <p>💼 <b>90 min, 4 times a week</b></p>
+                <p>💰 <b>200 Euros/month</b></p>
+                <p>🎯 <b>Reach B2 in French!</b></p>
+            </div>
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Your Full Name" required>
             <label for="email">Email</label>
