--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
             color: purple; /* Added purple color to titles */
         }
 
+        /* Navigation Menu */
+        nav {
+            background-color: #333;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 20px;
+            font-size: 1.2em;
+        }
+
+        nav a:hover {
+            color: #ddd;
+        }
+
         .form-container {
             display: flex;
             justify-content: space-evenly;
@@ -110,6 +128,16 @@
 </head>
 
 <body>
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="#hero">Home</a>
+        <a href="#student-needs">Understanding Your Challenges</a>
+        <a href="#services">Services</a>
+        <a href="#tariffs">Tariffs</a>
+        <a href="#testimonials">Testimonials</a>
+        <a href="#contact-form">Contact</a>
+    </nav>
+
     <header>
         <h1>French Lessons with Meriem</h1>
     </header>
