--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
     <!-- Navigation Menu -->
     <nav>
         <a href="#hero">Home</a>
-        <a href="#teacher-info">Teacher Info</a>
-        <a href="#faq">FAQ</a>
+        <a href="teacher-info.html">Teacher Info</a> <!-- Updated link for Teacher Info page -->
+        <a href="faq.html">FAQ</a> <!-- Updated link for FAQ page -->
         <a href="#student-needs">Understanding Your Challenges</a>
         <a href="#services">Services</a>
         <a href="#tariffs">Tariffs</a>
         <a href="#testimonials">Testimonials</a>
-        <a href="#contact-form">Contact</a>
     </nav>
 
     <header>
@@ -182,23 +181,6 @@
         <div style="text-align: center; margin-top: 20px;">
             <p style="font-size: 1.5em; font-weight: bold; color: black;">With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
         </div>
-    </section>
-
-    <section id="teacher-info">
-        <h2>Teacher Info</h2>
-        <p>I’m Meriem, a dedicated French teacher with years of experience helping students of all levels. Whether you're a beginner or looking to refine your skills, I customize lessons to fit your goals and learning style. I’ve taught students in various countries and cultures, helping them build confidence in speaking, listening, reading, and writing in French. I strive to make learning fun and engaging through interactive lessons and real-world applications.</p>
-    </section>
-
-    <section id="faq">
-        <h2>FAQ</h2>
-        <h3>How long is each lesson?</h3>
-        <p>Each lesson lasts 60-90 minutes, depending on your preferences and goals.</p>
-        <h3>Can I schedule a trial lesson?</h3>
-        <p>Yes! You can schedule a FREE first lesson to see if my teaching style is right for you.</p>
-        <h3>Do you offer group lessons?</h3>
-        <p>At the moment, I only offer private lessons to ensure each student receives personalized attention.</p>
-        <h3>What materials do you use for lessons?</h3>
-        <p>I use a variety of resources including textbooks, audio files, and real-world materials to make learning interactive and relevant.</p>
     </section>
 
     <section id="student-needs">
