--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
             <button type="submit">Submit</button>
         </form>
 
+        <!-- 6-Months Challenge Link -->
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="#challenge-form" style="font-weight: bold; color: red;">🚨 6-Months Challenge Details</a>
+        </div>
+
         <!-- 6-Months Challenge Form -->
         <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
             <h2>🚨 6-Months Challenge</h2>
