--- a/index.html
+++ b/index.html
@@ -173,10 +173,11 @@
         <h1>French Lessons with Meriem</h1>
     </header>
 
-    <!-- SIGNAL Link for 6-Month Challenge -->
-    <div id="challenge-link" onclick="window.location.href='6months-challenge.html'">
-        🚨 Click Here to Learn About the 6-Month Challenge 🚨
-    </div>
+    <!-- SIGNAL Link for the 6-Month Challenge -->
+<div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
+    🚨 Click Here to Learn About the 6-Month Challenge 🚨
+</div>
+
 
     <section class="form-container">
         <!-- Contact Form -->
