Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -18,7 +18,7 @@
         }
 
         h1, h2, h3 {
-            color: yellow; /* Yellow titles */
+            color: purple; /* Changed to purple for better visibility */
             text-align: center;
         }
 
