--- a/index.html
+++ b/index.html
@@ -174,10 +174,9 @@
     </header>
 
     <!-- SIGNAL Link for the 6-Month Challenge -->
-<div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
-    🚨 Click Here to Learn About the 6-Month Challenge 🚨
-</div>
-
+    <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
+        🚨 Click Here to Learn About the 6-Month Challenge 🚨
+    </div>
 
     <section class="form-container">
         <!-- Contact Form -->
@@ -236,4 +235,15 @@
         <h2 style="font-weight: bold;">My Services</h2>
         <ul>
             <li>Customized lessons for all levels</li>
-            <li>French for travel, business, and
+            <li>French for travel, business, and exams</li>
+            <li>Specialized programs for rapid language improvement</li>
+            <li>Flexible scheduling to fit your lifestyle</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p style="text-align: center; padding: 20px; background-color: #333; color: white;">© 2024 French Lessons with Meriem. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
